# slimevr-wrangler

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix  rustfmt.toml
.github/workflows/: build.yml
assets/: icon_64.rgba8
codec/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
codec/src/: lib.rs
codec/tests/: test_deku.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  test_deku.rs
src/: circle.rs  main.rs  needle.rs  settings.rs  style.rs  update.rs
src/joycon/: communication.rs  imu.rs  integration.rs  integration_with_joy.rs  linux_integration.rs  mod.rs  steam_blacklist.rs  svg.rs  test_integration.rs  wrapper.rs
src/slime/: deku.rs  mod.rs  test_deku.rs
src/steam_blacklist/: backend.rs  blacklist.rs  mod.rs
