[workspace]
members = ["protocol"]
resolver = "2"

[package]
name = "slimevr-wrangler"
version = "0.7.2"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced = { version = "0.6", features = ["async-std", "svg", "glow"] }
iced_native = "0.7"
async-std = "1.0"
joycon-rs = { git = "https://github.com/carl-anders/joycon-rs" }
directories = "4.0"
self_update = { version = "0.32", features = [
	"archive-zip",
	"compression-zip-deflate",
] }
protocol = { path = "protocol", features = ["nalgebra031"] }
itertools = "0.10"
nalgebra = "0.31"
arc-swap = "1.5"
vqf-cxx = { git = "https://github.com/carl-anders/vqf-cxx", branch = "nalgebra-0.31" }
keyvalues-parser = "0.1.0"
regex = "1.6"
thiserror = "1.0"

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.10"

[profile.release]
lto = true
codegen-units = 1
# panic = "abort" # Doesn't allow threads to catch themselves
opt-level = "s"
strip = true
