[package]
name = "protocol"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
deku = "0.15"
# We support multiple versions of nalgebra since it changes so much.
nalgebra032 = { package = "nalgebra", version = "0.32", optional = true }
nalgebra031 = { package = "nalgebra", version = "0.31", optional = true }
nalgebra030 = { package = "nalgebra", version = "0.30", optional = true }

[dev-dependencies]
nalgebra032 = { package = "nalgebra", version = "0.32" }
